# api-practice

./: docs.md
.github/workflows/: main.yml
fastAPI/: Dockerfile  asgi.py  docker-compose.yml  pyproject.toml
fastAPI/app/: app.py
fastAPI/dev-tools/: Dockerfile.test  build.sh  linters.sh
flask/: Dockerfile  README.md  docker-compose-docs.yml  docker-compose.yml  requirements-dev.txt  requirements.txt  setup.cfg  uwsgi.ini  wsgi.py
flask/app/: app.py
flask/dev-tools/: Dockerfile.test  build.sh  linters.sh
flask/dev-tools/gen-docs/: Dockerfile.docs  gen-docs.py  gen-docs.sh
flask/docs/: api-practice-flask-openapi.json  api-practice-flask-openapi.yml
