[tool.poetry]
name = "api-practice-fastapi"
version = "0.1.0"
description = ""
authors = ["Juan Suarez <jmsg99@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gino = {extras = ["starlette"], version = "^1.0.1"}
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
requests = "^2.27.1"
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
